Create dice roller with GUI

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ lab8/__pycache__/test_rectangles.cpython-311-pytest-7.4.3.pyc
 lab8/main.py
 lab8/points_tests.py
 lab8/rectangles_tests.py
+lab9/.idea/vcs.xml
+lab9/.idea/inspectionProfiles/profiles_settings.xml
+lab9/.idea/lab9.iml
+lab9/.idea/misc.xml
+lab9/.idea/modules.xml
+lab10/.idea/inspectionProfiles/profiles_settings.xml
+lab10/.idea/lab10.iml
+lab10/.idea/misc.xml
+lab10/.idea/modules.xml
+lab10/.idea/vcs.xml
