--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,63 @@ lab10/.idea/lab10.iml
 lab10/.idea/misc.xml
 lab10/.idea/modules.xml
 lab10/.idea/vcs.xml
+lab10 - tkinter/.idea/misc.xml
+lab10 - tkinter/.idea/lab10.iml
+lab10 - tkinter/.idea/modules.xml
+lab10 - tkinter/.idea/vcs.xml
+lab2 - typy i operacje/.idea/misc.xml
+lab2 - typy i operacje/.idea/modules.xml
+lab2 - typy i operacje/.idea/vcs.xml
+lab2 - typy i operacje/.idea/lab2.iml
+lab2 - typy i operacje/.idea/inspectionProfiles/profiles_settings.xml
+lab2 - typy i operacje/.idea/.name
+lab2 - typy i operacje/__pycache__/nums_operations.cpython-311.pyc
+lab2 - typy i operacje/__pycache__/string_operations.cpython-311.pyc
+lab3 - instrukcje i składnia/.idea/lab3.iml
+lab3 - instrukcje i składnia/.idea/misc.xml
+lab3 - instrukcje i składnia/.idea/modules.xml
+lab3 - instrukcje i składnia/.idea/vcs.xml
+lab3 - instrukcje i składnia/.idea/inspectionProfiles/profiles_settings.xml
+lab4 - funkcje/.idea/inspectionProfiles/profiles_settings.xml
+lab4 - funkcje/.idea/lab4.iml
+lab4 - funkcje/.idea/misc.xml
+lab4 - funkcje/.idea/modules.xml
+lab4 - funkcje/.idea/vcs.xml
+lab4 - funkcje/__pycache__/functions.cpython-311.pyc
+lab5 - moduły/.idea/lab5.iml
+lab5 - moduły/.idea/misc.xml
+lab5 - moduły/.idea/modules.xml
+lab5 - moduły/.idea/vcs.xml
+lab5 - moduły/.idea/workspace.xml
+lab5 - moduły/.idea/inspectionProfiles/profiles_settings.xml
+lab6 - klasy/.idea/.name
+lab6 - klasy/.idea/inspectionProfiles/profiles_settings.xml
+lab6 - klasy/.idea/lab6.iml
+lab6 - klasy/.idea/misc.xml
+lab6 - klasy/.idea/modules.xml
+lab6 - klasy/.idea/vcs.xml
+lab6 - klasy/__pycache__/points.cpython-311.pyc
+lab6 - klasy/__pycache__/rectangles.cpython-311.pyc
+lab7 - wyjątki i iteratory/.idea/lab7.iml
+lab7 - wyjątki i iteratory/.idea/misc.xml
+lab7 - wyjątki i iteratory/.idea/modules.xml
+lab7 - wyjątki i iteratory/.idea/vcs.xml
+lab7 - wyjątki i iteratory/.idea/inspectionProfiles/profiles_settings.xml
+lab7 - wyjątki i iteratory/__pycache__/DayIterator.cpython-311.pyc
+lab7 - wyjątki i iteratory/__pycache__/NESWIterator.cpython-311.pyc
+lab7 - wyjątki i iteratory/__pycache__/points.cpython-311.pyc
+lab7 - wyjątki i iteratory/__pycache__/rectangles.cpython-311.pyc
+lab7 - wyjątki i iteratory/__pycache__/ZeroOneIterator.cpython-311.pyc
+lab8 - dekoratory i metaklasy/.idea/inspectionProfiles/profiles_settings.xml
+lab8 - dekoratory i metaklasy/.idea/misc.xml
+lab8 - dekoratory i metaklasy/.idea/vcs.xml
+lab8 - dekoratory i metaklasy/__pycache__/points.cpython-311.pyc
+lab8 - dekoratory i metaklasy/__pycache__/rectangles.cpython-311.pyc
+lab8 - dekoratory i metaklasy/__pycache__/test_rectangles.cpython-311-pytest-7.4.3.pyc
+lab9 - pygame/.idea/inspectionProfiles/profiles_settings.xml
+lab9 - pygame/.idea/lab9.iml
+lab9 - pygame/.idea/.name
+lab9 - pygame/.idea/misc.xml
+lab9 - pygame/.idea/modules.xml
+lab9 - pygame/.idea/vcs.xml
+lab10 - tkinter/.idea/.name
